# geometries

./: README.md  cards.ipynb  pyproject.toml
geometries/: cards.py  fitting.py  paper.py
